@@ -828,12 +828,15 @@ class CItem extends CItemGeneral {
 	 * @param bool $update checks for updating items
 	 */
 	protected function checkInput(array &$items, $update=false) {
-		foreach ($items as $inum => $item) {
-			$items[$inum]['flags'] = ZBX_FLAG_DISCOVERY_NORMAL;
-		}
 		// validate if everything is ok with 'item->inventory fields' linkage
 		self::validateInventoryLinks($items, $update);
 		parent::checkInput($items, $update);
+
+		// add the values that cannot be changed, but are required for further processing
+		// they must be added after calling parent::checkInput() because it will unset any existing system field
+		foreach ($items as &$item) {
+			$item['flags'] = ZBX_FLAG_DISCOVERY_NORMAL;
+		}
 	}
 
 	/**
@@ -1100,7 +1103,7 @@ class CItem extends CItemGeneral {
 			self::exception(ZBX_API_ERROR_PERMISSIONS, _('You do not have permission to perform this operation.'));
 		}
 
-		$selectFields = array('flags');
+		$selectFields = array();
 		foreach ($this->fieldRules as $key => $rules) {
 			if (!isset($rules['system']) && !isset($rules['host'])) {
 				$selectFields[] = $key;
